--- a/src/features/main/Main.module.scss
+++ b/src/features/main/Main.module.scss
@@ -1,21 +1,25 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  a {
-    text-decoration: none;
-    .btnStart {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 300px;
-      padding: 15px 0;
-      border-radius: 15px;
-      background-color: rgba(0, 0, 0, 0.1);
-      color: darkred;
-      &:hover {
-        background-color: rgba(0, 0, 0, 0.2);
-        font-weight: bold;
+.container {
+  background-color: #857F7F;
+  margin: 0 auto;
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    a {
+      text-decoration: none;
+      .btnStart {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 300px;
+        padding: 15px 0;
+        border-radius: 15px;
+        background-color: rgba(0, 0, 0, 0.1);
+        color: darkred;
+        &:hover {
+          background-color: rgba(0, 0, 0, 0.2);
+          font-weight: bold;
+        }
       }
     }
   }
